# distributed_reachability_index

./: CMakeLists.txt  Makefile  WorkerO4.h  compile_runDemo.sh  local_test.sh  query.cpp  r2.sh  readme.md  run.cpp  run.sh  testrun.h
agent_analysis/: Worker_agentana.h
delBFS_analysis/: Vertex_delana.h  Worker_delana.h  statistics_delana.h
example/: queries.txt  toy.txt
example/graph/: part1.txt  part2.txt
reachO0/: VertexO0.h  WorkerO0.h
reachO1/: reachO1.h  vertexO1.h  workerO1.h
reachO2a/: VertexO2a.h  WorkerO2a.h
reachO3/: Vertex.h  Worker.h
reachO3a/: Worker.h
reachO3new/: Worker.h
reachO4/: WorkerO4.h
reachO4a/: WorkerO4a.h
reachO4b/: WorkerO4b.h
reachO4m1/: WorkerO4m1.h
reachO5/: WorkerO5.h
scripts/: remote.sh  run.sh  testscript.sh
testH/: DAGgenerator.h  butterfly.h  dfsop.h  header.h  level_deciding.h
utils/: CmdOptsParser.h  GraphIO.h  TeraSort.h  butterfly.h  communication.h  global.h  hash_set.h  serialization.h  settings.h  statistics.h  time.h  type.h  vecs.h  ydhdfs1.h  ydhdfs2.h
